# Panda

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  build_assimp.bat  build_bullet.bat  build_bullet.sh  build_crossguid.bat  build_crossguid.sh  build_libpng.bat  build_libpng.sh  build_llvm_clang.bat  build_llvm_clang.sh  build_opengex.bat  build_opengex.sh  build_zlib.bat  build_zlib.sh
Asset/Scene/: Circle009.dae  LinearInterpolateTest.ogex  Panda.ogex  areas.ogex  article.dae  article_lefthand.dae  billiard.ogex  bounder.dae  camera.dae  camera_bias_123.dae  camera_default.dae  camera_move_demo.dae  camera_nx_fov_45_cylinder_n10.dae  camera_nx_fov_45_cylinder_n10_rotate_x45.dae  camera_origin.dae  camera_scale_123.dae  camera_scale_123_rotate_x_30.dae  camera_tawards_n1_n1_0.dae  camera_tawards_n1_n1_0_.dae  camera_tawards_n1_n1_n1.dae  camera_tawards_n2_n1_0.dae  camera_tawards_pz.dae  camera_tawards_x_negitive.dae  camera_tawards_x_positive.dae  camera_tawards_y_negitive.dae  camera_tawards_y_positive.dae  camera_y_cylinder_10.dae  camera_y_fov_22.5_cylinder_10.dae  camera_y_fov_45_cylinder_10.dae  camera_y_fov_45_cylinder_10_rotate_y_45.dae  camera_z_bias_2.dae  complex.ogex  cone.dae  cone2.7.2.dae  cone2.7.2.ogex  cube.dae  cube.ogex  cube001.dae  cube008.dae  cube_modifier_array_2.dae  (+20 more)
Asset/Shaders/: basic.hlsl  basic.ps  basic.vs  basic_ps.cso  basic_ps.glsl  basic_vs.cso  basic_vs.glsl  cbuffer.h  test.hlsl  test_ps.cso  test_vs.cso
Asset/Textures/: 1pixel.tga
CMake/: PlatformDependencies.cmake
Editor/: CMakeLists.txt  EditorConfig.cpp  EditorLogic.cpp  EditorLogic.hpp
Empty/: EmptyApplication.cpp
Engine/: CMakeLists.txt
Engine/Common/: CMakeLists.txt  GfxConfiguration.hpp
Engine/Common/Entry/: BaseApplication.cpp  BaseApplication.hpp  EmptyApplicationConfig.cpp  LinuxOpenGLApplication.cpp  LinuxOpenGLApplication.hpp  LinuxOpenGLApplicationConfig.cpp  WindowsApplication.cpp  WindowsApplication.hpp  WindowsD3D12Application.cpp  WindowsD3D12ApplicationConfig.cpp  WindowsOpenGLApplication.cpp  WindowsOpenGLApplicationConfig.cpp
Engine/Core/: Allocator.cpp  Allocator.hpp  AssetLoader.cpp  AssetLoader.hpp  CMakeLists.txt  ColorSpaceConversion.hpp  HighPrecisionTimer.cpp  HighPrecisionTimer.hpp  Image.cpp  Image.hpp  KeyCode.hpp  MemoryManager.cpp  MemoryManager.hpp  Utility.hpp  portable.hpp
Engine/Core/Interface/: IApplication.hpp  IGameLogic.hpp  IShaderModule.hpp  Interface.hpp  SceneParser.hpp
Engine/Core/Math/: Bezier.hpp  CMakeLists.txt  Curve.hpp  DCT.cpp  MathUtility.hpp  Matrix.hpp  MatrixOps.hpp  Numerical.cpp  Numerical.hpp  PandaMath.hpp  Tree.hpp
Engine/Core/Parser/: BMP.cpp  BMP.hpp  DAE.cpp  DAE.hpp  JPEG.cpp  JPEG.hpp  OGEX.cpp  OGEX.hpp  PNG.cpp  PNG.hpp  TGA.cpp  TGA.hpp
Engine/DebugManager/: CMakeLists.txt  DebugManager.cpp  DebugManager.hpp
Engine/InputManager/: CMakeLists.txt  InputManager.cpp  InputManager.hpp
Engine/RHI/: CMakeLists.txt  GraphicsManager.cpp  GraphicsManager.hpp  ShaderModule.hpp
Engine/SceneManager/: BaseSceneNode.hpp  BaseSceneObject.hpp  CMakeLists.txt  Mesh.hpp  SceneBoneNode.hpp  SceneCameraNode.hpp  SceneGeometryNode.hpp  SceneManager.cpp  SceneManager.hpp  SceneNode.hpp  SceneObject.cpp  SceneObject.hpp  SceneObjectCamera.hpp  SceneObjectGeometry.hpp  SceneObjectLight.hpp  SceneObjectMaterial.hpp  SceneObjectMesh.hpp  SceneObjectTexture.hpp  SceneObjectTransform.hpp  SceneObjectTypeDef.hpp
Framework/: CMakeLists.txt
Framework/Ability/: Animatable.hpp
Framework/Codec/: BMP.hpp  OGEX.hpp
Framework/Common/: Allocator.cpp  Allocator.hpp  AnimationManager.cpp  AnimationManager.hpp  AssetLoader.cpp  AssetLoader.hpp  BaseApplication.cpp  BaseApplication.hpp  BaseSceneNode.hpp  BaseSceneObject.hpp  Buffer.hpp  CMakeLists.txt  ColorSpaceConversion.hpp  DebugManager.cpp  DebugManager.hpp  GameLogic.cpp  GameLogic.hpp  GfxConfiguration.hpp  GraphicsManager.cpp  GraphicsManager.hpp  HuffmanTree.hpp  Image.cpp  Image.hpp  InputManager.cpp  InputManager.hpp  MemoryManager.cpp  MemoryManager.hpp  Mesh.hpp  PhysicsManager.cpp  PhysicsManager.hpp  Scene.cpp  Scene.hpp  SceneLightNode.hpp  SceneManager.cpp  SceneManager.hpp  SceneNode.hpp  SceneObject.cpp  SceneObject.hpp  SceneObjectAnimation.cpp  SceneObjectAnimation.hpp  (+15 more)
Framework/Interface/: IApplication.hpp  IGameLogic.hpp  IPhysicsManager.hpp  IRuntimeModule.hpp  ImageParser.hpp  SceneParser.hpp
Framework/Math/: Bezier.hpp  CMakeLists.txt  Color.hpp  Curve.hpp  DCT.hpp  Linear.hpp  MathUtility.hpp  Matrix.hpp  Matrix3.h  Matrix3.hpp  Matrix4.h  Vector.hpp  (+14 more)
Framework/Test/: AssetLoaderTest.cpp  CMakeLists.txt  PandaMathTest.cpp  SceneObjectTest.cpp  TextureLoadTest.cpp
Game/Billiard/: BilliardGameConfig.cpp  BilliardGameLogic.cpp  BilliardGameLogic.hpp  CMakeLists.txt
Physics/: CMakeLists.txt  PhysicsManager.cpp  PhysicsManager.hpp
Platform/: CMakeLists.txt
Platform/Linux/: CMakeLists.txt  OpenGLApplication.cpp  OpenGLApplication.hpp  OpenGLApplicationConfig.cpp  XcbApplication.cpp  XcbApplication.hpp  helloengine_opengl.cpp  helloengine_openglxlib.cpp  helloengine_xcb.c
Platform/Windows/: CMakeLists.txt  D3D11Application.cpp  D3D12Application.cpp  D3D12Application.hpp  D3D12ApplicationConfig.cpp  HelloD3D12.cpp  OpenGLApplication.cpp  OpenGLApplication.hpp  OpenGLApplicationConfig.cpp  WindowsApplication.cpp  WindowsApplication.hpp  copy.ps  copy.vs  helloengine.c  helloengine_d2d.cpp  helloengine_d3d.cpp  helloengine_d3d12.cpp  helloengine_opengl.cpp  helloengine_win.c  main.cpp  vsoutput.hs
RHI/: CMakeLists.txt
Test/: AnimationTest.cpp  AssetLoaderTest.cpp  BezierCubic1DTest.cpp  BulletTest.cpp  CMakeLists.txt  ColorSpaceConversionTest.cpp  D3D12Cube.cpp  InstructionPipelineTest.cpp  JpegParserTest.cpp  LinearInterpolateTest.cpp  NumericalMethodsTest.cpp  OgexParserTest.cpp  PandaMathTest.cpp  PngParserTest.cpp  PolarDecompositionTest.cpp  PureMathTest.cpp  QRDecompositionTest.cpp  RasterizationTest.cpp  SceneLoadingTest.cpp  SceneObjectTest.cpp  TextureLoadTest.cpp  TgaParserTest.cpp
(+32 files in other folders)
